## Portions copyright (C) 2004, the OpenGLUT project contributors.
## OpenGLUT branched from freeglut in February, 2004.
## Process this file with automake to produce makefile.im

SUBDIRS = src include doc @OG_EXTRA_BUILD@
AUTOMAKE_OPTIONS = foreign # gnu

EXTRA_DIST = \
	COPYING ChangeLog INSTALL README \
	autogen.sh release.sh \
	OpenGLUT.dsp OpenGLUT.dsw OpenGLUT_static.dsp \
	OpenGLUT.dev \
	openglut.lsm

