## Portions copyright (C) 2004, the OpenGLUT project contributors.
## OpenGLUT branched from freeglut in February, 2004.
## Process this file with automake to produce Makefile.in

libopenlutincludedir = $(includedir)/GL
libopenlutinclude_HEADERS = openglut.h openglut_std.h openglut_exp.h openglut_ext.h @HEADER@
EXTRA_HEADERS = glut.h
